# halo2-zk-wasm

./: Cargo.toml  README.md  build-wasm.sh
halo2/: Cargo.toml
halo2_gadgets/: Cargo.toml
halo2_proofs/: Cargo.toml
