[package]
authors = [
  "Sean Bowe <sean@electriccoin.co>",
  "Ying Tong Lai <yingtong@electriccoin.co>",
  "Daira Hopwood <daira@electriccoin.co>",
  "Jack Grigg <jack@electriccoin.co>",
  "Matteo Pisani <matteo.pisani.91@gmail.com>",
]
categories = ["cryptography"]
description = """
Fast PLONK-based zero-knowledge proving system with no trusted setup
"""
documentation = "https://docs.rs/halo2_proofs"
edition = "2021"
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]
license = "MIT OR Apache-2.0"
name = "halo2_proofs"
readme = "README.md"
repository = "https://github.com/zcash/halo2"
rust-version = "1.56.1"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
harness = false
name = "arithmetic"

[[bench]]
harness = false
name = "commit_zk"

[[bench]]
harness = false
name = "hashtocurve"

[[bench]]
harness = false
name = "plonk"

[[bench]]
harness = false
name = "dev_lookup"

[[bench]]
harness = false
name = "fft"

[dependencies]
backtrace = {version = "0.3", optional = true}
blake2b_simd = "1"
ff = "0.13"
getrandom = {version = "0.2.9", features = ["js"]}
group = "0.13"
halo2curves = {git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2"}
rand_chacha = "0.3"
rand_core = {version = "0.6", default-features = false}
rayon = "1.5.1"
sha3 = "0.10.8"
tracing = "0.1"

# Developer tooling dependencies
plotters = {version = "0.3.0", optional = true}
tabbycat = {version = "0.1", features = ["attributes"], optional = true}

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5.1"
gumdrop = "0.8"
proptest = "1"
rand_core = {version = "0.6", default-features = false, features = ["getrandom"]}

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = {version = "0.2", features = ["js"]}

[features]
batch = ["rand_core/getrandom"]
circuit-params = []
default = ["batch"]
dev-graph = ["plotters", "tabbycat"]
gadget-traces = ["backtrace"]
sanity-checks = []

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.86"
